chore: update mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -150,4 +150,4 @@ nav:
   - Exam: pages/exam.md
   - FAQ: pages/faq.md
   - Online Resources: pages/online_resources.md
-  - General Resources ALI: https://viaucdk-my.sharepoint.com/:f:/g/personal/rib_viauc_dk/Egbdbeb9oy1Oqk8hReXf2-wBibryPlLiVj2ujGdsvH5--w?e=liO02A
+  - General Resources ALI: https://viaucdk-my.sharepoint.com/:f:/g/personal/rib_viauc_dk/EqyrbL4eyEtPlLcHYKt3NfIBLLBs2xWNa4CtjvvZb5dKTw?e=HGyFGo
