--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,7 @@ theme:
   name: material
   language: en
   # custom_dir: overrides
-  favicon: figures/fav.png
+  favicon: figures/ali.png
   logo: figures/ali.png
   icon:
     repo: fontawesome/brands/github
