--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ mkdocs-material-extensions
 pymdown-extensions>=1.1.1
 mkdocs-same-dir>=0.1.2
 mkdocs-git-revision-date-localized-plugin>=1.2.0
-mkdocs-quiz
+git+https://github.com/RBrooksDK/mkdocs-quiz.git#egg=mkdocs-quiz
