--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,12 @@
 name: Deploy docs
 
+# Disabled - enable when ready to use GitHub Pages
+# on:
+#   push:
+#     branches:
+#       - main
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:  # Only runs manually from GitHub Actions tab
 
 permissions:
   contents: write
